--- a/tmux.conf
+++ b/tmux.conf
@@ -109,14 +109,14 @@ bind-key P run-shell 'pom stop >/dev/null 2>&1 && tmux source ~/.tmux.conf'
   set -g pane-active-border-style fg=colour07
   set -g message-style fg=colour07,bg=colour04,bold
 
-  set -g window-status-separator "│"
+  set -g window-status-separator ""
   set -g window-status-bell-bg red
   set -g window-status-bell-fg white
 
   set -g window-status-style fg=colour07,bg=colour04
   set -g window-status-current-style fg=colour07,bg=colour04,bold
-  set -g window-status-format "#I:#W"
-  set -g window-status-current-format "•#I:#W"
+  set -g window-status-format " #I:#W "
+  set -g window-status-current-format " #I:#W "
 # }}}
 
 
