--- a/tmux.conf
+++ b/tmux.conf
@@ -104,15 +104,15 @@ bind-key P run-shell 'pom stop >/dev/null 2>&1 && tmux source ~/.tmux.conf'
 # }}}
 
 # Status and window appearance and style {{{
-  set -g status-style fg=colour0,bg=colour15
-  set -g pane-border-style fg=colour04
-  set -g pane-active-border-style fg=colour04
-  set -g message-style fg=colour0,bg=colour15,bold
+  set -g status-style fg=colour15,bg="#242a32"
+  set -g pane-border-style fg="#242a32"
+  set -g pane-active-border-style fg="#242a32"
+  set -g message-style fg="#242a32",bg=colour15,bold
 
   set -g window-status-separator ""
-  set -g window-status-style fg=colour0,bg=colour15
+  set -g window-status-style fg=colour15,bg="#242a32"
   set -g window-status-bell-style fg=colour0,bg=colour1
-  set -g window-status-current-style fg=colour0,bg=colour15,bold
+  set -g window-status-current-style fg=colour15,bg="#242a32",bold
   set -g window-status-format " #I:#W "
   set -g window-status-current-format " #I:#W "
 # }}}
