update some vim highlighting, and keybidings + tmux status fix.

--- a/tmux.conf
+++ b/tmux.conf
@@ -111,7 +111,8 @@ bind-key P run-shell 'pom stop >/dev/null 2>&1 && tmux source ~/.tmux.conf'
 
   set -g window-status-separator ""
   set -g window-status-style fg=colour15,bg="#242a32"
-  set -g window-status-bell-style fg=colour0,bg=colour1
+  set -g window-status-bell-style fg=colour0,bg=colour03
+  set -g window-status-activity-style fg=colour14,bg="#242a32",bold
   set -g window-status-current-style fg=colour15,bg="#242a32",bold
   set -g window-status-format " #I:#W "
   set -g window-status-current-format " #I:#W "
