Remove some unused tmux segments, and add own tmux-pomodoro plugin

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,7 +7,7 @@
   bind C-t send-prefix
 # }}}
 
-set-option -sg escape-time 0 # change the escape time in tmux to zero
+set-option -sg escape-time 0 # change the escape time in tmux to zero, improves vim responsiveness
 set-option -g history-limit 500000 # Increase scrollback history
 
 set -g default-terminal "xterm-256color-italic"
@@ -120,7 +120,7 @@ bind-key P run-shell 'pom stop >/dev/null 2>&1 && tmux source ~/.tmux.conf'
 
 
 # status line {{{
-  set-option -g status-left "#(~/.tmux/prompt.sh left)"
+  set-option -g status-left " #{pomodoro_status}"
   set-option -g status-right "#(~/.tmux/prompt.sh right)"
 # }}}
 
@@ -135,6 +135,7 @@ set -g @tpm_plugins ' \
   tmux-plugins/tmux-pain-control \
   christoomey/vim-tmux-navigator \
   tmux-plugins/tmux-sessionist \
+  alexanderjeurissen/tmux-pomodoro \
 '
 
 # Check if tmux plugin manager is installed, otherwise clone it.
