--- a/tmux.conf
+++ b/tmux.conf
@@ -104,24 +104,22 @@ bind-key P run-shell 'pom stop >/dev/null 2>&1 && tmux source ~/.tmux.conf'
 # }}}
 
 # Status and window appearance and style {{{
-  set -g status-style fg=colour15,bg="#242a32"
-  set -g pane-border-style fg="#242a32"
-  set -g pane-active-border-style fg="#242a32"
-  set -g message-style fg="#242a32",bg=colour15,bold
-
   set -g window-status-separator ""
-  set -g window-status-style fg=colour15,bg="#242a32"
-  set -g window-status-bell-style fg=colour0,bg=colour03
-  set -g window-status-activity-style fg=colour14,bg="#242a32",bold
-  set -g window-status-current-style fg=colour15,bg="#242a32",bold
   set -g window-status-format " #I:#W "
   set -g window-status-current-format " #I:#W "
+
+  set -g window-status-current-style fg=black,bg=blue,bold
+  set -g window-status-style fg=white,bg=black
+  set -g window-status-activity-style fg=blue,bg=black,bold
 # }}}
 
 
 # status line {{{
-  set-option -g status-left " #{pomodoro_status}"
-  set-option -g status-right "#(~/.tmux/prompt.sh right)"
+  set -g @nord_tmux_show_status_content "0"
+  set -g @online_icon "#[bg=green, fg=black]  ONLINE #[bg=default, fg=default]"
+  set -g @offline_icon "#[bg=red, fg=black]  OFFLINE #[bg=default, fg=default]"
+  set-option -g status-left "#{pomodoro_status} "
+  set-option -g status-right "#{online_status} #(vpn_status) #[bg=blue, fg=black] #[bold]SFO#[nobold]: #(TZ=US/Pacific date +\"%I:%M %p\")  #[bold]AMS #[nobold]: #(TZ=Europe/Amsterdam date +\"%I:%M %p\") "
 # }}}
 
 # Tmux plugins {{{
@@ -136,6 +134,8 @@ set -g @tpm_plugins ' \
   christoomey/vim-tmux-navigator \
   tmux-plugins/tmux-sessionist \
   alexanderjeurissen/tmux-pomodoro \
+  tmux-plugins/tmux-online-status \
+  arcticicestudio/nord-tmux \
 '
 
 # Check if tmux plugin manager is installed, otherwise clone it.
