Add alexanderjeurissen/tmux-world-clock plugin

--- a/tmux.conf
+++ b/tmux.conf
@@ -118,8 +118,12 @@ bind-key P run-shell 'pom stop >/dev/null 2>&1 && tmux source ~/.tmux.conf'
   set -g @nord_tmux_show_status_content "0"
   set -g @online_icon "#[bg=green, fg=black]  ONLINE #[bg=default, fg=default]"
   set -g @offline_icon "#[bg=red, fg=black]  OFFLINE #[bg=default, fg=default]"
+
+  set -g @tmux_world_clock_tz_one "Europe/Amsterdam"
+  set -g @tmux_world_clock_tz_two "US/Pacific"
+
   set-option -g status-left "#{pomodoro_status} "
-  set-option -g status-right "#{online_status} #(vpn_status) #[bg=blue, fg=black] #[bold]SFO#[nobold]: #(TZ=US/Pacific date +\"%I:%M %p\")  #[bold]AMS #[nobold]: #(TZ=Europe/Amsterdam date +\"%I:%M %p\") "
+  set-option -g status-right "#{online_status} #(vpn_status) #[bg=blue, fg=black] #{world_clock_status} "
 # }}}
 
 # Tmux plugins {{{
@@ -134,6 +138,7 @@ set -g @tpm_plugins ' \
   christoomey/vim-tmux-navigator \
   tmux-plugins/tmux-sessionist \
   alexanderjeurissen/tmux-pomodoro \
+  alexanderjeurissen/tmux-world-clock \
   tmux-plugins/tmux-online-status \
   arcticicestudio/nord-tmux \
 '
