--- a/tmux.conf
+++ b/tmux.conf
@@ -116,8 +116,8 @@ bind-key P run-shell 'pom stop >/dev/null 2>&1 && tmux source ~/.tmux.conf'
 
 # status line {{{
   set -g @nord_tmux_show_status_content "0"
-  set -g @online_icon "#[bg=green, fg=black]  ONLINE #[bg=default, fg=default]"
-  set -g @offline_icon "#[bg=red, fg=black]  OFFLINE #[bg=default, fg=default]"
+  set -g @online_icon "#[bg=green, fg=black, bold]  ONLINE #[bg=default, fg=default, nobold]"
+  set -g @offline_icon "#[bg=red, fg=black, bold]  OFFLINE #[bg=default, fg=default, nobold]"
 
   set -g @tmux_world_clock_tz_one "Europe/Amsterdam"
   set -g @tmux_world_clock_tz_two "US/Pacific"
