some small changes

--- a/tmux.conf
+++ b/tmux.conf
@@ -119,8 +119,9 @@ bind-key P run-shell 'pom stop >/dev/null 2>&1 && tmux source ~/.tmux.conf'
   set -g @online_icon "#[bg=green, fg=black, bold]  ONLINE #[bg=default, fg=default, nobold]"
   set -g @offline_icon "#[bg=red, fg=black, bold]  OFFLINE #[bg=default, fg=default, nobold]"
 
-  set -g @tmux_world_clock_tz_one "Europe/Amsterdam"
-  set -g @tmux_world_clock_tz_two "US/Pacific"
+  set -g @world_clock_tz 'Europe/Amsterdam'
+  set -g @world_clock_tz 'US/Pacific'
+  set -g @world_clock_tz 'Asia/Kolkata'
 
   set-option -g status-left "#{pomodoro_status} "
   set-option -g status-right "#{online_status} #(vpn_status) #[bg=blue, fg=black] #{world_clock_status} "
