Use set -g @plugin syntax instead of deprecated @tpm_plugins list

--- a/tmux.conf
+++ b/tmux.conf
@@ -128,21 +128,19 @@ bind-key P run-shell 'pom stop >/dev/null 2>&1 && tmux source ~/.tmux.conf'
 # }}}
 
 # Tmux plugins {{{
-set -g @tpm_plugins ' \
-  tmux-plugins/tpm \
-  tmux-plugins/tmux-resurrect \
-  tmux-plugins/tmux-continuum \
-  tmux-plugins/tmux-yank \
-  tmux-plugins/tmux-copycat \
-  tmux-plugins/tmux-open \
-  tmux-plugins/tmux-pain-control \
-  christoomey/vim-tmux-navigator \
-  tmux-plugins/tmux-sessionist \
-  alexanderjeurissen/tmux-pomodoro \
-  alexanderjeurissen/tmux-world-clock \
-  tmux-plugins/tmux-online-status \
-  arcticicestudio/nord-tmux \
-'
+set -g @plugin "tmux-plugins/tpm"
+set -g @plugin "tmux-plugins/tmux-resurrect"
+set -g @plugin "tmux-plugins/tmux-continuum"
+set -g @plugin "tmux-plugins/tmux-yank"
+set -g @plugin "tmux-plugins/tmux-copycat"
+set -g @plugin "tmux-plugins/tmux-open"
+set -g @plugin "tmux-plugins/tmux-pain-control"
+set -g @plugin "christoomey/vim-tmux-navigator"
+set -g @plugin "tmux-plugins/tmux-sessionist"
+set -g @plugin "alexanderjeurissen/tmux-pomodoro"
+set -g @plugin "alexanderjeurissen/tmux-world-clock"
+set -g @plugin "tmux-plugins/tmux-online-status"
+set -g @plugin "arcticicestudio/nord-tmux"
 
 # Check if tmux plugin manager is installed, otherwise clone it.
 if "test ! -d ~/.tmux/plugins/tpm" \
