--- a/tmux.conf
+++ b/tmux.conf
@@ -103,10 +103,6 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
   set -g window-status-separator ""
   set -g window-status-format " #I:#W "
   set -g window-status-current-format " #I:#W "
-
-  set -g window-status-current-style fg=black,bg=blue,bold
-  set -g window-status-style fg=white,bg=black
-  set -g window-status-activity-style fg=blue,bg=black,bold
 # }}}
 
 
@@ -136,7 +132,8 @@ set -g @plugin "tmux-plugins/tmux-sessionist"
 set -g @plugin "alexanderjeurissen/tmux-pomodoro"
 set -g @plugin "alexanderjeurissen/tmux-world-clock"
 set -g @plugin "tmux-plugins/tmux-online-status"
-set -g @plugin "arcticicestudio/nord-tmux"
+# set -g @plugin "arcticicestudio/nord-tmux"
+set -g @plugin 'KeitaNakamura/neodark.vim'
 
 # Check if tmux plugin manager is installed, otherwise clone it.
 if "test ! -d ~/.tmux/plugins/tpm" \
@@ -145,3 +142,9 @@ if "test ! -d ~/.tmux/plugins/tpm" \
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 # }}}
+
+set -g status-bg default
+set -g status-fg default
+set -g window-status-current-style fg=black,bg=white,bold
+set -g window-status-style fg=default,bg=default
+set -g window-status-activity-style fg=white,bg=default,bold
