move statusbar to top of screen

--- a/tmux.conf
+++ b/tmux.conf
@@ -87,6 +87,7 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
   set-option -g status-justify "left"
   set-option -g status-left-length 500
   set-option -g status-right-length 500
+  set-option -g status-position top
 # }}}
 
 # Window options {{{
