--- a/snowblocks/tmux/snowblock.json
+++ b/snowblocks/tmux/snowblock.json
@@ -9,7 +9,7 @@
     "link": {
       "~/.tmux.conf": null
     },
-    "shell": {
+    "shell": [
       [
         "mkdir -p ~/.tmux/plugins",
         "Create .tmux and .tmux/plugins directory"
@@ -18,6 +18,6 @@
         "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm",
         "Install TPM / Tmux plugin manager"
       ]
-    }
+    ]
   }
 ]
