--- a/snowblocks/tmux/snowblock.json
+++ b/snowblocks/tmux/snowblock.json
@@ -13,10 +13,14 @@
       [
         "mkdir -p ~/.tmux/plugins",
         "Create .tmux and .tmux/plugins directory"
+      ],
+      [
+        "git -C ~/.tmux/plugins/tpm pull || git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm",
+        "Install/Update TPM (Tmux plugin manager)"
       ]
       [
-        "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm",
-        "Install TPM / Tmux plugin manager"
+        "tmux source ~/.tmux.conf",
+        "Let tmux source ~/.tmux.conf"
       ]
     ]
   }
