--- a/snowblocks/tmux/snowblock.json
+++ b/snowblocks/tmux/snowblock.json
@@ -7,7 +7,7 @@
   },
   {
     "link": {
-      "~/.tmux.conf": null
+      "~/.tmux.conf": { "relink": true }
     },
     "shell": [
       [
@@ -17,7 +17,7 @@
       [
         "git -C ~/.tmux/plugins/tpm pull || git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm",
         "Install/Update TPM (Tmux plugin manager)"
-      ]
+      ],
       [
         "tmux source ~/.tmux.conf",
         "Let tmux source ~/.tmux.conf"
