--- a/snowblocks/zsh/snowblock.json
+++ b/snowblocks/zsh/snowblock.json
@@ -8,11 +8,11 @@
   },
   {
     "link": {
-      "~/.zshrc": null,
-      "~/.zprofile": null,
-      "~/.zshenv": null,
-      "~/.zplug": null,
-      "/usr/local/share/zsh/site-functions/prompt_snappy_setup": { "create": true }
+      "~/.zshrc": { "relink": true },
+      "~/.zprofile": { "relink": true },
+      "~/.zshenv": { "relink": true },
+      "~/.zplug": { "relink": true },
+      "/usr/local/share/zsh/site-functions/prompt_snappy_setup": { "create": true, "relink": true }
     }
   }
 ]
