--- a/snowblocks/git/snowblock.json
+++ b/snowblocks/git/snowblock.json
@@ -3,6 +3,11 @@
     "clean": ["~"]
   },
   {
+    "dependencies": [
+      { "name": "git", "cmd": "brew install git" }
+    ]
+  },
+  {
     "link": {
       "~/.gitconfig": {
         "relink": true
