Add viscosity brew cask to general dependencies.

--- a/snowblocks/a_general/snowblock.json
+++ b/snowblocks/a_general/snowblock.json
@@ -38,8 +38,8 @@
         "cmd": "brew cask install slack"
       },
       {
-        "name": "teensy",
-        "cmd": "brew cask install teensy"
+        "name": "viscosity",
+        "cmd": "brew cask install viscosity"
       }
     ]
   }
