Update several config files

--- a/snowblocks/browser/snowblock.json
+++ b/snowblocks/browser/snowblock.json
@@ -9,7 +9,7 @@
         "cmd": "brew cask install firefox"
       },
       {
-        "name": "chrome",
+        "name": "google-chrome",
         "cmd": "brew cask install google-chrome"
       }
     ]
