--- a/snowblocks/zsh/snowblock.json
+++ b/snowblocks/zsh/snowblock.json
@@ -11,8 +11,7 @@
       { "name": "zsh", "cmd": "brew install zsh" },
       { "name": "ranger", "cmd": "brew install ranger" },
       { "name": "fzf", "cmd": "brew install fzf" },
-      { "name": "terminal-notifier", "cmd": "brew install terminal-notifier" },
-      { "name": "pure-prompt", "cmd": "yarn global add pure-prompt" }
+      { "name": "terminal-notifier", "cmd": "brew install terminal-notifier" }
     ]
   },
   {
